--- a/galeria.html
+++ b/galeria.html
@@ -227,8 +227,7 @@
 </div>
 <!--------------------------------------------------------------------------------------------------------------------------------------->
 
-
-<!-----------------------------------------------EXPANSION 002 MAULLIDO TROPICAL------------------------------------------------------------------->
+<!-----------------------------------------------EXPANSION 002 (MAULLIDO TROPICAL)------------------------------------------------------------------->
 
 <div id="MICHIBOX002"  data-expansion="2" class="cartasgaleriacontainer">
       <div class="separacion"></div>
@@ -284,24 +283,24 @@
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-48"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-49"></button>
-      <div class="overlay-bloqueo overnormal"></div>
-    </div>
-        <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-50"></button>
-      <div class="overlay-bloqueo overnormal"></div>
-    </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-51"></button>
-      <div class="overlay-bloqueo overnormal"></div>
-    </div>
 
   </div>
 
 
   <div class="contenedorcolores" >
 
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-49"></button>
+      <div class="overlay-bloqueo overraro"></div>
+    </div>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-50"></button>
+      <div class="overlay-bloqueo overraro"></div>
+    </div>
+    <div class="carta-wrapper" data-pass="">
+      <button class="cartaejemplo plata" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-51"></button>
+      <div class="overlay-bloqueo overraro"></div>
+    </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-52"></button>
       <div class="overlay-bloqueo overraro"></div>
@@ -311,10 +310,10 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo plata" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-54"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-54"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+        <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-55"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
@@ -326,18 +325,6 @@
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-57"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-        <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-58"></button>
-      <div class="overlay-bloqueo overraro"></div>
-    </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-59"></button>
-      <div class="overlay-bloqueo overraro"></div>
-    </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-60"></button>
-      <div class="overlay-bloqueo overraro"></div>
-    </div>
 
   </div>
 
@@ -345,23 +332,23 @@
   <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-61"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> CONSIGUE 10 CARTAS DE <b> MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-58"></button>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="normal" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-62"></button>
-      <div class="overlay-bloqueo overespecial" data-cartel="<p> CONSIGUE TODAS LAS CARTAS NORMALES DE <b> MAULLIDO TROPICAL </b> <br> para desbloquear esta carta. </p>"></div>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-59"></button>
+      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>  CONSIGUE TODAS LAS CARTAS NORMALES DE MAULLIDO TROPICAL </b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="raro" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-63"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p>CONSIGUE TODAS LAS CARTAS RARAS DE <b> MAULLIDO TROPICAL </b> <br> para desbloquear esta carta. </p>"></div>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-60"></button>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE TODAS LAS CARTAS RARAS DE  MAULLIDO TROPICAL </b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-64"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-61"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-65"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-62"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["053","054","055"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
 
@@ -370,7 +357,7 @@
 </div>
 <!--------------------------------------------------------------------------------------------------------------------------------------->
 
-<!-----------------------------------------------EXPANSION 003 INVASIÓN FELINA------------------------------------------------------------------->
+<!-----------------------------------------------EXPANSION 003 (INVASIÓN FELINA)------------------------------------------------------------------->
 <!--
 <div id="MICHIBOX003" data-expansion="3" class="cartasgaleriacontainer">
     <div class="separacion"></div>
