--- a/noticias.html
+++ b/noticias.html
@@ -23,7 +23,11 @@
 
       <div class="contenedorQUEESyNOTICIAS">
 
-                <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_003.webp);"></DIV>
+<DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_004.webp);"></DIV>
+<p> <b>● Actualización V2.0.5. </b> <BR></BR> El verano llega con nuevos felinos exóticos y cajas llenas de frescura en esta expansión que nadie pidió, pero todos necesitaban: Maullido Tropical. <BR></BR> Más maullidos, más incoherencias y, por supuesto… ¡más cajas! </p>
+
+
+<DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_003.webp);"></DIV>
 <p> Se está trabajando para implementar una tienda digitál para la obtención de contenido MICHI BOX <br> Póximamente podrás disfrutar de la tienda en el juego.  </p>
 
 
