--- a/galeria.html
+++ b/galeria.html
@@ -331,8 +331,8 @@
 
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-58"></button>
+    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="058">
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas//MINIATURAS/058.webp);" data-target="carousel-item-58"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="normal" data-pass="">
@@ -486,7 +486,7 @@
 
         <div class="fondonegro"  >
    <DIV class="contenedorbotoncerrar">
-  <a class="botonatras" onclick="abrirVentanaExpansiones()" style="background-image: url(./assets/expansiones.webp);"> EXPANSIONES </a>
+  <a class="botonatras"  style="background-image: url(./assets/expansiones.webp);"> <P style="color: rgb(255, 54, 54); font-size: 450%; position: absolute;text-shadow: 0px 0px 10px rgba(0,0,0,1);" >🛇</P> <p>EXPANSIONES</p> </a>
     <button  class="botonatras"> X </button>
       <a id="botonCambiar"  class="botonatras" style="background-image: url(./assets/intercambio.webp);"> COMPARTIR </a>
 </DIV>
@@ -1222,7 +1222,29 @@
   </div>
 </div>
 
+        <!-----------------------------------------058------------------------------------>
 
+<div class="carousel-item Clegendario" id="carousel-item-58">
+                        <p class="textorareza"> MICHI DE COLECCIÓN #2 <br> ● MAULLIDO TROPICAL ● </p>
+                        <P class="textorareza PLEGENDARIO" >LEGENDARIA </P>
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+                    <img loading="lazy" class="michi" src="./assets/cartas/LEGENDARIAS/058/058_FONDO_b.webp" style="z-index: 8;" />
+                              <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1)"></div>  
+              <img loading="lazy" class="arriba" src="./assets/cartas/LEGENDARIAS/058/058_FONDO.webp"  />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/058/058_CAJA_ATRAS.webp" style="z-index: 10; animation: sacudida 1s ease  forwards;" />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/058/058_CAJA_MEDIO_GATO.webp" style="z-index: 11; animation: sacudida 1s ease reverse  forwards;"  />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/058/058_CAJA_MEDIO_TABLA.webp" style="z-index: 11; animation: sacudida 1.2s ease  forwards;"  />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/058/058_CAJA_DELANTERA.webp" style="z-index: 12; animation: sacudida 1s ease  forwards;" />
+
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+  </div>
+</div>
 
 <!-----------------------------------------------------------------------------> 
       </div>
