--- a/galeria.html
+++ b/galeria.html
@@ -486,7 +486,7 @@
 
         <div class="fondonegro"  >
    <DIV class="contenedorbotoncerrar">
-  <a class="botonatras"  style="background-image: url(./assets/expansiones.webp);"> <P style="color: rgb(255, 54, 54); font-size: 450%; position: absolute;text-shadow: 0px 0px 10px rgba(0,0,0,1);" >🛇</P> <p>EXPANSIONES</p> </a>
+  <a class="botonatras"  style="background-image: url(./assets/expansiones.webp);"> <P style="color: rgb(255, 54, 54); font-size: 450%; position: absolute;text-shadow: 0px 0px 10px rgba(0,0,0,1);" >X</P> <p>EXPANSIONES</p> </a>
     <button  class="botonatras"> X </button>
       <a id="botonCambiar"  class="botonatras" style="background-image: url(./assets/intercambio.webp);"> COMPARTIR </a>
 </DIV>
