--- a/galeria.html
+++ b/galeria.html
@@ -235,8 +235,8 @@
   <div class="expansion"  style="background-image: url(./assets/expansion002_icon.webp);"></div>
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-pass="" >
-      <button  class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-37"></button>
+    <div class="carta-wrapper" data-pass="037" >
+      <button  class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/037.webp);" data-target="carousel-item-37"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -763,6 +763,21 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/018.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+
+                <!-------------------------------------037---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-37" >
+                                  <p class="textorareza"> MICHI LICUADOS <br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/037.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
