--- a/noticias.html
+++ b/noticias.html
@@ -24,7 +24,7 @@
       <div class="contenedorQUEESyNOTICIAS">
 
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_004.webp);"></DIV>
-<p> <b>● Actualización V2.0.5. </b> <BR></BR> El verano llega con nuevos felinos exóticos y cajas llenas de frescura en esta expansión que nadie pidió, pero todos necesitaban: Maullido Tropical. <BR></BR> Más maullidos, más incoherencias y, por supuesto… ¡más cajas! </p>
+<p> <b>● Actualización V2.0.5. </b> <BR></BR> El verano llega con nuevos felinos exóticos y cajas llenas de frescura en esta expansión que nadie pidió, pero todos necesitaban: Maullido Tropical. <BR></BR> Más gatos, más cajas y, por supuesto… ¡más incoherencias! </p>
 
 
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_003.webp);"></DIV>
