--- a/galeria.html
+++ b/galeria.html
@@ -339,9 +339,9 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-59"></button>
       <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>  CONSIGUE TODAS LAS CARTAS NORMALES DE MAULLIDO TROPICAL </b> <br> para desbloquear esta carta. </p>"></div>
     </div>
-    <div class="carta-wrapper" data-requiere-rareza="raro" data-pass="">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-60"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE TODAS LAS CARTAS RARAS DE  MAULLIDO TROPICAL </b> <br> para desbloquear esta carta. </p>"></div>
+    <div class="carta-wrapper" data-pass="060">
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
+      <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> <b>●MICHI PIRATA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-61"></button>
@@ -805,7 +805,6 @@
               background-size: 1236px 450px;
           "></div>
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/019/0019papel.webp"  />
-                <img loading="lazy" class="capaholograficaestrellas" src="assets/cartas/RARAS/019/0019fondoTROQUEL.webp" style="z-index: 16; opacity: 30%;" />
 
            <div  data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/019/0019qr.webp);"> </div> 
 
@@ -909,7 +908,6 @@
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/023/023papel.webp"  />
                 <img loading="lazy" class="michi" src="assets/cartas/RARAS/023/023michi02.webp" style=" z-index: 11;  animation: flotar 5s ease-in-out alternate-reverse infinite, blur alternate-reverse 5s infinite;">
                 <img loading="lazy" class="michi" src="assets/cartas/RARAS/023/023michi.webp" style=" z-index: 12;  animation: flotar 3s ease-in-out alternate infinite, blur alternate 5s infinite;">
-                <img loading="lazy" class="capaholograficaestrellas" src="assets/cartas/RARAS/023/023estrellas.webp"   />
                 <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/023/023_QR.webp);"> </div> 
 
             </div>
@@ -1021,7 +1019,6 @@
                 background-size: 1236px 450px;
             "></div>
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/049/049papel.webp"  />
-                <img loading="lazy" class="capaholograficaestrellas" src="assets/cartas/RARAS/049/049holograma.webp" style="z-index: 18; opacity: 30%;" />
                 <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/049/049_QR.webp);"> </div> 
 
             </div>
@@ -1038,7 +1035,6 @@
               <img loading="lazy" class="medio" src="assets/cartas/RARAS/050/050_fondo.webp"/>   
                  <div class="lineascolores" style="z-index: 9; transform: rotate(33deg) scale(1.75); filter: opacity(80%);"></div>  
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/050/050_holo_001.webp"  />
-                <img loading="lazy" class="capaholograficaestrellas" src="assets/cartas/RARAS/050/050_holo_002.webp" style="z-index: 9; opacity: 50%;" />
                            <div class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/050/050_QR.webp);"> </div> 
 
             </div>
@@ -1260,6 +1256,33 @@
     </div>
   </div>
 </div>
+
+
+        <!-----------------------------------------060------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-60">
+                        <p class="textorareza"> MICHI TESORO <br> ● MAULLIDO TROPICAL ● </p>
+                        <P class="textorareza PLEGENDARIO" >LEGENDARIA </P>
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+    <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1)"></div>  
+    <div data-lazy="true" class="michi lazy-michi" data-style="
+        z-index: 19;
+        background-image: url('/assets/cartas/LEGENDARIAS/060/060_animacion.webp'); 
+        animation: animacion 0.6s steps(4) forwards infinite;
+        background-size: 1236px 450px;
+    "></div> 
+              <img loading="lazy" class="sombra" src="./assets/cartas/LEGENDARIAS/060/060_cofre.webp" style="animation: brillomonedaoro 2s ease-in-out alternate infinite;"  />
+              
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+  </div>
+</div>
+
 
 <!-----------------------------------------------------------------------------> 
       </div>
