--- a/galeria.html
+++ b/galeria.html
@@ -743,7 +743,7 @@
 
         <!-------------------------------------017---------------------------------------->  
          <div class="carousel-item Cnormal" id="carousel-item-17" >
-                                  <p class="textorareza"> MICHI ??? <br> ● MICHI-BOX ●</p>
+                                  <p class="textorareza"> MICHI BOLSA <br> ● MICHI-BOX ●</p>
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
@@ -758,7 +758,7 @@
 
         <!-------------------------------------018---------------------------------------->  
          <div class="carousel-item Cnormal" id="carousel-item-18" >
-                                  <p class="textorareza"> MICHI ??? <br> ● MICHI-BOX ●</p>
+                                  <p class="textorareza"> MICHI² <br> ● MICHI-BOX ●</p>
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
