--- a/galeria.html
+++ b/galeria.html
@@ -239,47 +239,47 @@
       <button  class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/037.webp);" data-target="carousel-item-37"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-38"></button>
+    <div class="carta-wrapper" data-pass="038">
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/038.webp);" data-target="carousel-item-38"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-39"></button>
+    <div class="carta-wrapper" data-pass="039">
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/039.webp);" data-target="carousel-item-39"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-40"></button>
+    <div class="carta-wrapper" data-pass="040">
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/040.webp);" data-target="carousel-item-40"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="041">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-41"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="042">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-42"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="043">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-43"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="044">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-44"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="045">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-45"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-46"></button>
+    <div class="carta-wrapper" data-pass="046">
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/046.webp);" data-target="carousel-item-46"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-        <div class="carta-wrapper" data-pass="">
+        <div class="carta-wrapper" data-pass="047">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-47"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="048">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-48"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -301,15 +301,15 @@
       <button class="cartaejemplo plata" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/051.webp);" data-target="carousel-item-51"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="052">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-52"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="053">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-53"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="054">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-54"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
@@ -317,11 +317,11 @@
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/055.webp);" data-target="carousel-item-55"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="056">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-56"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="057">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-57"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
@@ -778,6 +778,62 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/037.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                        <!-------------------------------------038---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-38" >
+                                  <p class="textorareza"> MICHI CAJA DE ARENA<br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/038.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                                <!-------------------------------------039---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-39" >
+                                  <p class="textorareza"> MICHI TROPICAL<br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/039.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                                        <!-------------------------------------040---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-40" >
+                                  <p class="textorareza"> MICHI MAPA<br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/040.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido lazy-michi"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
+                </div>                  
+            </div>
+          </div>
+        </div>
+                                              <!-------------------------------------046---------------------------------------->  
+         <div class="carousel-item Cnormal" id="carousel-item-46" >
+                                  <p class="textorareza"> MICHI FLOR<br> ● MAULLIDO TROPICAL ●</p>
+                        <P class="textorareza PNORMAL" > NORMAL </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/046.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
