--- a/galeria.html
+++ b/galeria.html
@@ -176,7 +176,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0270MB0554F99GFGT">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-27"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0280MB1154F99GTU5">
@@ -1018,6 +1018,28 @@
             </div>
           </div>
         </div>
+
+
+                        <!--------------------------------027---------------------------------------------> 
+       
+        <div class="carousel-item Craro" id="carousel-item-27">
+                        <p class="textorareza"> MICHI ROBOT <br> ● MICHI-BOX ●</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle2">
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/027/027_fondo.webp"/>   
+              <div class="lineascolores" style="z-index: 9; transform: rotate(33deg) scale(1.75);"></div>  
+                <div data-lazy="true" class="michi lazy-michi" data-style="
+                z-index: 16;
+                background-image: url('/assets/cartas/RARAS/027/027_animacion_02.webp'); 
+                animation: animacion 0.3s steps(4) forwards infinite;
+                background-size: 1236px 450px;
+            "></div>
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/);"> </div> 
+
+            </div>
+          </div>
+        </div>
      
 
 
@@ -1389,9 +1411,7 @@
     </main>
 
     <!-- Scripts -->
-    <script>
-      AOS.init();
-    </script>
+
     <script src="sketch/sketch.js" defer></script>
     <script>
       if ("serviceWorker" in navigator) {
