--- a/galeria.html
+++ b/galeria.html
@@ -335,19 +335,19 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas//MINIATURAS/058.webp);" data-target="carousel-item-58"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
-    <div class="carta-wrapper" data-pass="059">
+    <div class="carta-wrapper" >
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI AVENTURERO</b> <br> <b>●MICHI TEMPLO PERDIDO</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" data-pass="060">
+    <div class="carta-wrapper" >
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> <b>●MICHI PIRATA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" data-pass="061">
+    <div class="carta-wrapper">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-61"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" data-pass="062">
+    <div class="carta-wrapper">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-62"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["053","054","055"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
