--- a/galeria.html
+++ b/galeria.html
@@ -197,27 +197,27 @@
 
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="031">
+    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="031SUPERCOLECCION">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/031.webp);" data-target="carousel-item-31"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE <br> 10 CARTAS DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"> </div>
     </div>
-    <div class="carta-wrapper" data-requiere-rareza="normal" data-pass="032">
+    <div class="carta-wrapper" data-requiere-rareza="normal" data-pass="ROCKNROLL032">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/032.webp);" data-target="carousel-item-32"></button>
       <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE TODAS <br> LAS CARTAS NORMALES DE <br> MICHI-BOX </b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
-    <div class="carta-wrapper" data-requiere-rareza="raro" data-pass="033">
+    <div class="carta-wrapper" data-requiere-rareza="raro" data-pass="0R3Y033">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/033.webp);" data-target="carousel-item-33"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE <br> TODAS  LAS <br> CARTAS RARAS <br> DE  MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
-    <div class="carta-wrapper" data-pass="034">
+    <div class="carta-wrapper" data-pass="0P3LUCH4">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["009AMBF6JHG8HJ82A","019AMB658GHG575TV","0280MB1154F99GTU5"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear <br> esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" data-pass="035">
+    <div class="carta-wrapper" data-pass="035QUIMICOX">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["002AMBGH8S6TH9985","0260MB026FFFFGY32","0290MB1GHJJK82G76"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> <b>●MICHI RAYOS X</b> <br> para desbloquear <br> esta carta. </p>" > </div>
     </div>
-    <div class="carta-wrapper" data-requiere-cantidad="30" data-pass="036">
+    <div class="carta-wrapper" data-requiere-cantidad="30" data-pass="036SUPERHEROESMICHIBOXSECRET">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
       <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>COMPLETA LA <br> COLECCIÓN DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
@@ -335,19 +335,19 @@
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas//MINIATURAS/058.webp);" data-target="carousel-item-58"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b> CONSIGUE 10 CARTAS DE  MAULLIDO TROPICAL</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
-    <div class="carta-wrapper" >
+    <div class="carta-wrapper" data-pass="059">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI AVENTURERO</b> <br> <b>●MICHI TEMPLO PERDIDO</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper" >
+    <div class="carta-wrapper" data-pass="060">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/060.webp);" data-target="carousel-item-60"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MAPA</b> <br> <b>●MICHI CAZA TESOROS</b> <br> <b>●MICHI PIRATA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper">
+    <div class="carta-wrapper" data-pass="061">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-61"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["050","051","052"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
-    <div class="carta-wrapper">
+    <div class="carta-wrapper" data-pass="062">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-62"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["053","054","055"]' data-cartel="<p> Necesitas a: <br> <b>●???</b> <br> <b>●???</b> <br> <b>●???</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
