--- a/galeria.html
+++ b/galeria.html
@@ -168,7 +168,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0250MB0262HFTGY32">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/);" data-target="carousel-item-25"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/025.webp);" data-target="carousel-item-25"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0260MB026FFFFGY32">
@@ -995,6 +995,36 @@
           </div>
         </div>
   
+        <!--------------------------------------025---------------------------------------> 
+
+
+        <div class="carousel-item Craro" id="carousel-item-25">
+                        <p class="textorareza"> MICHI-BOX ANTIESTRÉS <br> ● MICHI-BOX ●</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4">
+              <div class="fondo-rainbow"></div> 
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/025/025_FONDO.webp" />
+                            <div class="lineascolores" style="z-index: 6; transform: rotate(45deg) scale(1.75);"></div>  
+
+              <div data-lazy="true" class="michi lazy-michi" data-style="
+              z-index: 7;
+              background-image: url('/assets/cartas/RARAS/025/025_animacion.webp'); 
+              animation: animacion 0.6s steps(4) forwards infinite;
+              background-size: 1236px 450px;
+          "></div>
+                        <div data-lazy="true" class="michi lazy-michi" data-style="
+              z-index: 8;
+              background-image: url('/assets/cartas/RARAS/025/025_animacion_02.webp'); 
+              animation: animacion 0.3s steps(4) forwards infinite;
+              background-size: 1236px 450px;
+          "></div>
+
+             <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/024/024_QR.webp);"> </div> 
+
+            </div>
+          </div>
+        </div>
 
                 <!--------------------------------026---------------------------------------------> 
        
