--- a/galeria.html
+++ b/galeria.html
@@ -999,26 +999,21 @@
 
 
         <div class="carousel-item Craro" id="carousel-item-25">
-                        <p class="textorareza"> MICHI-BOX ANTIESTRÉS <br> ● MICHI-BOX ●</p>
+                        <p class="textorareza"> MICHI HOME OFFICE <br> ● MICHI-BOX ●</p>
                         <P class="textorareza PRARO" >RARA </P>
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle4">
+            <div class="carta frente" data-circle="circle4 circle5">
               <div class="fondo-rainbow"></div> 
-              <img loading="lazy" class="medio" src="assets/cartas/RARAS/025/025_FONDO.webp" />
-                            <div class="lineascolores" style="z-index: 6; transform: rotate(45deg) scale(1.75);"></div>  
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/025/025_fondo.webp" />
+                            <div class="lineascolores" style="z-index: 8; transform: rotate(55deg) scale(2); filter: blur(15px) brightness(0.8) sepia(1) saturate(10) hue-rotate(250deg);"></div>  
 
               <div data-lazy="true" class="michi lazy-michi" data-style="
-              z-index: 7;
+              z-index: 10;
               background-image: url('/assets/cartas/RARAS/025/025_animacion.webp'); 
-              animation: animacion 0.6s steps(4) forwards infinite;
+              animation: animacion 0.5s steps(4) forwards infinite;
               background-size: 1236px 450px;
           "></div>
-                        <div data-lazy="true" class="michi lazy-michi" data-style="
-              z-index: 8;
-              background-image: url('/assets/cartas/RARAS/025/025_animacion_02.webp'); 
-              animation: animacion 0.3s steps(4) forwards infinite;
-              background-size: 1236px 450px;
-          "></div>
+
 
              <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/024/024_QR.webp);"> </div> 
 
