--- a/galeria.html
+++ b/galeria.html
@@ -1002,7 +1002,7 @@
             <div class="carta frente" data-circle="circle4 circle5">
               <div class="fondo-rainbow"></div> 
               <img loading="lazy" class="medio" src="assets/cartas/RARAS/025/025_fondo.webp" />
-                            <div class="lineascolores" style="z-index: 8; transform: rotate(55deg) scale(2); filter: blur(15px) brightness(0.8) sepia(1) saturate(10) hue-rotate(250deg);"></div>  
+                            <div class="lineascolores" style="z-index: 8; transform: rotate(55deg) scale(2); filter: brightness(0.4) sepia(1) saturate(10) hue-rotate(250deg);"></div>  
 
               <div data-lazy="true" class="michi lazy-michi" data-style="
               z-index: 10;
@@ -1117,7 +1117,6 @@
                 animation: animacion 0.7s steps(4) forwards infinite;
                 background-size: 1236px 450px;
             "></div>
-                <img loading="lazy" class="sombra" src="assets/cartas/RARAS/049/049papel.webp"  />
                 <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/049/049_QR.webp);"> </div> 
 
             </div>
