--- a/galeria.html
+++ b/galeria.html
@@ -954,7 +954,6 @@
                         <P class="textorareza PRARO" >RARA </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
-              <div class="fondo-rainbow" ></div>
               <img loading="lazy" class="medio" src="assets/cartas/RARAS/023/023fondo.webp" style="filter: opacity(70%);" />                
                               <div class="lineascolores" style="z-index: 9; transform: rotate(-45deg) scale(1.75); filter:grayscale(1) brightness(0) opacity(50%);"></div>  
 
@@ -975,7 +974,6 @@
                         <P class="textorareza PRARO" >RARA </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <div class="fondo-rainbow"></div> 
               <img loading="lazy" class="medio" src="assets/cartas/RARAS/024/024fondo.webp" />
                             <div class="lineascolores" style="z-index: 6; transform: rotate(45deg) scale(1.75);"></div>  
 
@@ -1000,8 +998,8 @@
                         <P class="textorareza PRARO" >RARA </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle5">
-              <div class="fondo-rainbow"></div> 
               <img loading="lazy" class="medio" src="assets/cartas/RARAS/025/025_fondo.webp" />
+                            <div class="lineascolores" style="z-index: 8; transform: rotate(55deg) scale(2); filter: brightness(0.4) sepia(1) saturate(10) hue-rotate(250deg);"></div>  
 
               <div data-lazy="true" class="michi lazy-michi" data-style="
               z-index: 10;
@@ -1009,8 +1007,6 @@
               animation: animacion 0.5s steps(4) forwards infinite;
               background-size: 1236px 450px;
           "></div>
-
-
              <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/024/024_QR.webp);"> </div> 
 
             </div>
