--- a/galeria.html
+++ b/galeria.html
@@ -978,7 +978,6 @@
                             <div class="lineascolores" style="z-index: 6; transform: rotate(45deg) scale(1.75);"></div>  
 
               <div data-lazy="true" class="michi lazy-michi" data-style="
-              filter: opacity(80%);
               z-index: 7;
               background-image: url('/assets/cartas/RARAS/024/024fondo_animacion.webp'); 
               animation: animacion 0.3s steps(4) forwards infinite;
@@ -999,7 +998,7 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle5">
               <img loading="lazy" class="medio" src="assets/cartas/RARAS/025/025_fondo.webp" />
-                            <div class="lineascolores" style="z-index: 8; transform: rotate(55deg) scale(2); filter: brightness(0.4) sepia(1) saturate(10) hue-rotate(250deg);"></div>  
+                            <div class="lineascolores" style="z-index: 8; transform: rotate(25deg) scale(2); filter: blur(20px) brightness(0.4) sepia(1) saturate(10) hue-rotate(250deg);"></div>  
 
               <div data-lazy="true" class="michi lazy-michi" data-style="
               z-index: 10;
